<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addMovieString"
                android:layout_marginTop="10dp"
                android:layout_centerInParent="true"
                android:textSize="25dp"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:hint="@string/titleString" />

        <EditText
            android:id="@+id/yearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/yearString"/>

        <EditText
            android:id="@+id/directorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/directorString" />

        <Spinner
            android:id="@+id/genreSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

        <RatingBar
            android:id="@+id/movieRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/recommendSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommendString" />

        <EditText
            android:id="@+id/commentsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:layout_marginTop="20dp"
            android:hint="@string/commentsString"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/saveString"/>
        </RelativeLayout>

    </LinearLayout>


</ScrollView>